--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -68,3 +68,10 @@ html, body {
   padding: 20px;
   cursor: pointer;
 }
+
+.collapsed {
+  visibility: collapse;
+  height: 0;
+  width: 0;
+  position: absolute;
+}
